--- a/rufangrongke/rufangrongke/Classes/kehu/View/WXZBasicInfoCell.xib
+++ b/rufangrongke/rufangrongke/Classes/kehu/View/WXZBasicInfoCell.xib
@@ -41,8 +41,8 @@
                             <constraint firstAttribute="height" constant="1" id="X2c-mY-Zhe"/>
                         </constraints>
                     </imageView>
-                    <textField opaque="NO" clipsSubviews="YES" tag="100021" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入姓名" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MKT-rP-K2Z">
-                        <rect key="frame" x="61" y="10" width="79" height="30"/>
+                    <textField opaque="NO" clipsSubviews="YES" tag="100021" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入姓名" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="MKT-rP-K2Z">
+                        <rect key="frame" x="61" y="10" width="176" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="XzX-ZZ-Upa"/>
                         </constraints>
@@ -55,7 +55,7 @@
                         <color key="textColor" red="0.5490196078431373" green="0.54509803921568623" blue="0.54509803921568623" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" clipsSubviews="YES" tag="100022" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入11位手机号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iwh-JD-ncf">
+                    <textField opaque="NO" clipsSubviews="YES" tag="100022" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入11位手机号" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="iwh-JD-ncf">
                         <rect key="frame" x="76" y="44" width="287" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="HPr-Gx-yT2"/>
@@ -77,10 +77,25 @@
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="INR-vY-umh">
+                        <rect key="frame" x="61" y="40" width="166" height="1"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="7uv-MH-3vT"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="ncM-uS-dlQ">
+                        <rect key="frame" x="76" y="74" width="279" height="1"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="TW8-pw-avP"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="eR0-1E-X1p" secondAttribute="trailing" constant="10" id="3lG-qg-raG"/>
                     <constraint firstAttribute="bottom" secondItem="MaZ-dV-Vd9" secondAttribute="bottom" id="8PA-WM-sYK"/>
+                    <constraint firstItem="ncM-uS-dlQ" firstAttribute="top" secondItem="iwh-JD-ncf" secondAttribute="bottom" id="8en-Fo-vFh"/>
+                    <constraint firstItem="ncM-uS-dlQ" firstAttribute="leading" secondItem="iwh-JD-ncf" secondAttribute="leading" id="BGj-7R-wlU"/>
+                    <constraint firstItem="INR-vY-umh" firstAttribute="top" secondItem="MKT-rP-K2Z" secondAttribute="bottom" id="E5x-kn-5JY"/>
                     <constraint firstItem="krE-FL-hxB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="EM1-YS-ntT"/>
                     <constraint firstItem="Bab-GN-Ocl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="197" id="F9L-fV-XQh"/>
                     <constraint firstItem="krE-FL-hxB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="11" id="G0f-oa-DGX"/>
@@ -92,15 +107,19 @@
                     <constraint firstAttribute="trailing" secondItem="iwh-JD-ncf" secondAttribute="trailing" constant="12" id="Rcx-yx-Sar"/>
                     <constraint firstAttribute="trailing" secondItem="MaZ-dV-Vd9" secondAttribute="trailing" id="SSU-bm-C6l"/>
                     <constraint firstItem="Bab-GN-Ocl" firstAttribute="centerY" secondItem="MKT-rP-K2Z" secondAttribute="centerY" id="UJX-IS-gZW"/>
-                    <constraint firstItem="Bab-GN-Ocl" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="MKT-rP-K2Z" secondAttribute="trailing" constant="5" id="UMm-B2-aFP"/>
+                    <constraint firstItem="Bab-GN-Ocl" firstAttribute="leading" secondItem="MKT-rP-K2Z" secondAttribute="trailing" constant="5" id="UMm-B2-aFP"/>
                     <constraint firstItem="eR0-1E-X1p" firstAttribute="leading" secondItem="Bab-GN-Ocl" secondAttribute="trailing" constant="5" id="Uu4-7F-sNB"/>
                     <constraint firstAttribute="trailingMargin" secondItem="iwh-JD-ncf" secondAttribute="trailing" constant="11" id="Wcp-kI-q4y"/>
                     <constraint firstItem="iwh-JD-ncf" firstAttribute="leading" secondItem="7fr-dA-f8x" secondAttribute="trailing" constant="5" id="YHA-g6-LWo"/>
+                    <constraint firstAttribute="trailing" secondItem="ncM-uS-dlQ" secondAttribute="trailing" constant="20" id="ZfD-PU-EEV"/>
                     <constraint firstItem="eR0-1E-X1p" firstAttribute="centerY" secondItem="Bab-GN-Ocl" secondAttribute="centerY" id="aKt-R4-D4w"/>
                     <constraint firstItem="7fr-dA-f8x" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="11" id="ctj-te-kUS"/>
                     <constraint firstItem="iwh-JD-ncf" firstAttribute="leading" secondItem="7fr-dA-f8x" secondAttribute="trailing" constant="5" id="inF-nv-qVP"/>
+                    <constraint firstItem="INR-vY-umh" firstAttribute="leading" secondItem="MKT-rP-K2Z" secondAttribute="leading" id="mp1-1J-e4X"/>
+                    <constraint firstItem="INR-vY-umh" firstAttribute="trailing" secondItem="MKT-rP-K2Z" secondAttribute="trailing" constant="-10" id="mtF-nE-qq2"/>
                     <constraint firstItem="Bab-GN-Ocl" firstAttribute="top" secondItem="krE-FL-hxB" secondAttribute="bottom" constant="3" id="oid-MQ-rXp"/>
                     <constraint firstItem="iwh-JD-ncf" firstAttribute="centerY" secondItem="7fr-dA-f8x" secondAttribute="centerY" id="rAg-tz-vhE"/>
+                    <constraint firstItem="ncM-uS-dlQ" firstAttribute="trailing" secondItem="iwh-JD-ncf" secondAttribute="trailing" constant="-10" id="sw6-1e-Drc"/>
                     <constraint firstAttribute="trailing" secondItem="MKT-rP-K2Z" secondAttribute="trailing" constant="12" id="ygz-eP-Gaa"/>
                 </constraints>
                 <variation key="default">
@@ -108,6 +127,7 @@
                         <exclude reference="ygz-eP-Gaa"/>
                         <exclude reference="Wcp-kI-q4y"/>
                         <exclude reference="inF-nv-qVP"/>
+                        <exclude reference="sw6-1e-Drc"/>
                         <exclude reference="F9L-fV-XQh"/>
                         <exclude reference="KWc-Gd-GoC"/>
                         <exclude reference="oid-MQ-rXp"/>
