--- a/rufangrongke/rufangrongke/Classes/wo/Controller/WXZModifyPhoneVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/WXZModifyPhoneVC.xib
@@ -218,7 +218,7 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textField opaque="NO" clipsSubviews="YES" tag="100027" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入新手机号验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z5A-4T-VbJ">
+                                        <textField opaque="NO" clipsSubviews="YES" tag="100027" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入新手机号验证码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Z5A-4T-VbJ">
                                             <rect key="frame" x="100" y="12" width="480" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="Tyq-Xj-grb"/>
