--- a/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalInfoVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalInfoVC.xib
@@ -33,7 +33,13 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="真实姓名" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P95-M5-14K">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="94s-B1-3VY">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="1"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="9uW-kB-xzM"/>
+                    </constraints>
+                </imageView>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="真实姓名" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="P95-M5-14K">
                     <rect key="frame" x="12" y="13" width="576" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="6br-tf-fSi"/>
@@ -41,12 +47,24 @@
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <textInputTraits key="textInputTraits" returnKeyType="done"/>
                 </textField>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="CqQ-Qu-gE7">
+                    <rect key="frame" x="0.0" y="54" width="600" height="1"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="NGQ-Gy-dK6"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="94s-B1-3VY" firstAttribute="leading" secondItem="ujZ-dx-zHZ" secondAttribute="leading" id="7kb-VH-2Tc"/>
                 <constraint firstAttribute="centerY" secondItem="P95-M5-14K" secondAttribute="centerY" id="8Ve-wW-QB0"/>
+                <constraint firstAttribute="trailing" secondItem="CqQ-Qu-gE7" secondAttribute="trailing" id="Ade-lf-BXC"/>
+                <constraint firstItem="94s-B1-3VY" firstAttribute="top" secondItem="ujZ-dx-zHZ" secondAttribute="top" id="Cn1-FW-4eU"/>
                 <constraint firstAttribute="trailing" secondItem="P95-M5-14K" secondAttribute="trailing" constant="12" id="NTV-Py-qQF"/>
+                <constraint firstItem="CqQ-Qu-gE7" firstAttribute="leading" secondItem="ujZ-dx-zHZ" secondAttribute="leading" id="SsF-aH-McP"/>
+                <constraint firstAttribute="bottom" secondItem="CqQ-Qu-gE7" secondAttribute="bottom" id="Sxn-mU-Yar"/>
                 <constraint firstItem="P95-M5-14K" firstAttribute="leading" secondItem="ujZ-dx-zHZ" secondAttribute="leading" constant="12" id="XSq-Vz-sba"/>
+                <constraint firstAttribute="trailing" secondItem="94s-B1-3VY" secondAttribute="trailing" id="khH-Nj-4gi"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -56,6 +74,12 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="110"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="fgj-pN-UJ0">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="1"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="POr-ek-7kx"/>
+                    </constraints>
+                </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="男" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0G-rw-qZm">
                     <rect key="frame" x="14" y="20" width="15" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -96,6 +120,11 @@
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Jzk-Sc-6bw"/>
+                        </mask>
+                    </variation>
                     <connections>
                         <action selector="selectSexAction:" destination="-1" eventType="touchUpInside" id="JIt-xT-pnE"/>
                     </connections>
@@ -108,10 +137,21 @@
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="oSo-bE-FD9"/>
+                        </mask>
+                    </variation>
                     <connections>
                         <action selector="selectSexAction:" destination="-1" eventType="touchUpInside" id="kyC-JY-hwe"/>
                     </connections>
                 </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="sUL-uV-dGh">
+                    <rect key="frame" x="0.0" y="109" width="600" height="1"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="xu8-hY-gW0"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
@@ -120,6 +160,7 @@
                 <constraint firstItem="6fJ-2h-hm4" firstAttribute="top" secondItem="EPg-3U-0Zi" secondAttribute="top" constant="20" id="CUI-O0-5xr"/>
                 <constraint firstAttribute="trailing" secondItem="p5l-6V-WIX" secondAttribute="trailing" constant="12" id="CuO-oW-n56"/>
                 <constraint firstItem="fXX-Qd-N10" firstAttribute="top" secondItem="I0G-rw-qZm" secondAttribute="bottom" constant="20" id="HAT-9t-0iX"/>
+                <constraint firstAttribute="trailing" secondItem="sUL-uV-dGh" secondAttribute="trailing" id="HVE-0T-hVq"/>
                 <constraint firstItem="p5l-6V-WIX" firstAttribute="top" secondItem="fXX-Qd-N10" secondAttribute="bottom" constant="20" id="NhH-fw-QB7"/>
                 <constraint firstAttribute="trailing" secondItem="4eP-mq-IgC" secondAttribute="trailing" id="Pza-5c-j4G"/>
                 <constraint firstItem="fXX-Qd-N10" firstAttribute="top" secondItem="4eP-mq-IgC" secondAttribute="bottom" id="QyM-gj-D8l"/>
@@ -127,14 +168,19 @@
                 <constraint firstItem="4eP-mq-IgC" firstAttribute="top" secondItem="EPg-3U-0Zi" secondAttribute="top" id="V8g-pR-Vzo"/>
                 <constraint firstAttribute="trailing" secondItem="GFk-iH-z3V" secondAttribute="trailing" id="W99-fT-l1A"/>
                 <constraint firstItem="FUM-Ga-8wa" firstAttribute="leading" secondItem="EPg-3U-0Zi" secondAttribute="leading" constant="14" id="YXs-Vu-eMI"/>
+                <constraint firstItem="fgj-pN-UJ0" firstAttribute="top" secondItem="EPg-3U-0Zi" secondAttribute="top" id="ZAM-4b-o89"/>
                 <constraint firstItem="GFk-iH-z3V" firstAttribute="leading" secondItem="EPg-3U-0Zi" secondAttribute="leading" id="a2I-X7-7D1"/>
                 <constraint firstAttribute="centerY" secondItem="fXX-Qd-N10" secondAttribute="centerY" id="cJx-Ng-5qG"/>
+                <constraint firstItem="sUL-uV-dGh" firstAttribute="leading" secondItem="EPg-3U-0Zi" secondAttribute="leading" id="fct-Cl-neZ"/>
                 <constraint firstItem="fXX-Qd-N10" firstAttribute="leading" secondItem="EPg-3U-0Zi" secondAttribute="leading" id="hXI-g9-QX2"/>
+                <constraint firstItem="fgj-pN-UJ0" firstAttribute="leading" secondItem="EPg-3U-0Zi" secondAttribute="leading" id="inh-Ma-6sP"/>
                 <constraint firstItem="GFk-iH-z3V" firstAttribute="top" secondItem="fXX-Qd-N10" secondAttribute="bottom" id="kEx-Bw-RRv"/>
                 <constraint firstAttribute="bottom" secondItem="GFk-iH-z3V" secondAttribute="bottom" id="kaN-Zl-9vl"/>
+                <constraint firstAttribute="trailing" secondItem="fgj-pN-UJ0" secondAttribute="trailing" id="mvU-Xc-B98"/>
                 <constraint firstItem="I0G-rw-qZm" firstAttribute="leading" secondItem="EPg-3U-0Zi" secondAttribute="leading" constant="14" id="s57-oH-k9w"/>
                 <constraint firstAttribute="trailing" secondItem="6fJ-2h-hm4" secondAttribute="trailing" constant="12" id="ter-a4-pHO"/>
                 <constraint firstItem="I0G-rw-qZm" firstAttribute="top" secondItem="EPg-3U-0Zi" secondAttribute="top" constant="20" id="v2d-oo-4eR"/>
+                <constraint firstAttribute="bottom" secondItem="sUL-uV-dGh" secondAttribute="bottom" id="xTt-vY-Isf"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -152,16 +198,16 @@
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="当前密码" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jGN-aq-TRG">
                     <rect key="frame" x="12" y="20" width="60" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="新  密  码" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3c7-jP-ihg">
                     <rect key="frame" x="12" y="75" width="61" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入新密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kVw-vo-fel">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入新密码" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="kVw-vo-fel">
                     <rect key="frame" x="98" y="69" width="462" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="9EI-6v-Exd"/>
@@ -175,7 +221,7 @@
                         <constraint firstAttribute="height" constant="1" id="zIJ-Hw-aEe"/>
                     </constraints>
                 </imageView>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入当前密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NXP-W0-YDR">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入当前密码" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="NXP-W0-YDR">
                     <rect key="frame" x="97" y="14" width="491" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="Hrg-Lw-3ks"/>
