--- a/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalStoreVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalStoreVC.xib
@@ -62,8 +62,8 @@
                                                 <constraint firstAttribute="height" constant="40" id="GvJ-Fa-AHs"/>
                                             </constraints>
                                         </imageView>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="新门店名称" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2yI-2b-a4M">
-                                            <rect key="frame" x="22" y="136" width="556" height="30"/>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="新门店名称" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="2yI-2b-a4M">
+                                            <rect key="frame" x="22" y="136" width="564" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="IkN-Cp-fzD"/>
                                             </constraints>
@@ -83,8 +83,8 @@
                                         <constraint firstItem="V3t-sl-6oP" firstAttribute="leading" secondItem="V93-lX-o44" secondAttribute="leading" id="3at-Mj-nJ3"/>
                                         <constraint firstAttribute="trailing" secondItem="Ga7-y5-AHy" secondAttribute="trailing" id="BAf-RY-qVD"/>
                                         <constraint firstItem="Ffc-5U-dxV" firstAttribute="leading" secondItem="V93-lX-o44" secondAttribute="leading" id="Doh-4q-dYu"/>
-                                        <constraint firstItem="2yI-2b-a4M" firstAttribute="leading" secondItem="V93-lX-o44" secondAttribute="leading" constant="22" id="FIh-si-vDB"/>
                                         <constraint firstAttribute="trailing" secondItem="X9Q-Ng-e6G" secondAttribute="trailing" constant="17" id="Jhk-71-tja"/>
+                                        <constraint firstItem="2yI-2b-a4M" firstAttribute="leading" secondItem="X9Q-Ng-e6G" secondAttribute="leading" constant="5" id="K7A-oX-LQt"/>
                                         <constraint firstItem="X9Q-Ng-e6G" firstAttribute="leading" secondItem="V93-lX-o44" secondAttribute="leading" constant="17" id="LSI-ia-Wb1"/>
                                         <constraint firstItem="Ga7-y5-AHy" firstAttribute="top" secondItem="V93-lX-o44" secondAttribute="top" id="VLx-Hg-RZE"/>
                                         <constraint firstItem="Ga7-y5-AHy" firstAttribute="leading" secondItem="V93-lX-o44" secondAttribute="leading" id="W9D-qO-3z9"/>
@@ -92,11 +92,11 @@
                                         <constraint firstAttribute="bottom" secondItem="X9Q-Ng-e6G" secondAttribute="bottom" constant="8" id="brm-X2-l5a"/>
                                         <constraint firstItem="X9Q-Ng-e6G" firstAttribute="top" secondItem="V3t-sl-6oP" secondAttribute="bottom" constant="7" id="f3J-jc-k61"/>
                                         <constraint firstItem="yZc-eK-G1t" firstAttribute="top" secondItem="Ga7-y5-AHy" secondAttribute="bottom" constant="8" id="h5o-2V-pGz"/>
+                                        <constraint firstItem="2yI-2b-a4M" firstAttribute="trailing" secondItem="X9Q-Ng-e6G" secondAttribute="trailing" constant="3" id="ilr-9v-taL"/>
                                         <constraint firstAttribute="bottom" secondItem="Ffc-5U-dxV" secondAttribute="bottom" id="lNy-ER-T4r"/>
                                         <constraint firstAttribute="centerX" secondItem="yZc-eK-G1t" secondAttribute="centerX" id="mQD-TY-KJh"/>
                                         <constraint firstAttribute="trailing" secondItem="V3t-sl-6oP" secondAttribute="trailing" id="p3S-Wl-r8Y"/>
                                         <constraint firstItem="2yI-2b-a4M" firstAttribute="centerY" secondItem="X9Q-Ng-e6G" secondAttribute="centerY" id="rWC-Lh-4L2"/>
-                                        <constraint firstAttribute="trailing" secondItem="2yI-2b-a4M" secondAttribute="trailing" constant="22" id="txh-KD-uzK"/>
                                     </constraints>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tZs-me-5ur">
