--- a/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalCertificationVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalCertificationVC.xib
@@ -64,7 +64,7 @@
                                         <constraint firstAttribute="height" constant="30" id="EnS-KH-gRx"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="done"/>
                                 </textField>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="2b5-ZQ-5Xn">
                                     <rect key="frame" x="0.0" y="118" width="600" height="1"/>
