--- a/rufangrongke/rufangrongke/Classes/wo/Controller/WXZModifyPhoneVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/WXZModifyPhoneVC.xib
@@ -69,7 +69,7 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textField opaque="NO" clipsSubviews="YES" tag="100011" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入当前手机号验证码" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="FZ1-60-tJa">
+                                        <textField opaque="NO" clipsSubviews="YES" tag="100011" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="FZ1-60-tJa">
                                             <rect key="frame" x="100" y="13" width="386" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="wo0-rQ-QQc"/>
