--- a/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalInfoVC.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/Controller/WXZPersonalInfoVC.xib
@@ -213,7 +213,7 @@
                         <constraint firstAttribute="height" constant="30" id="9EI-6v-Exd"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="done" secureTextEntry="YES"/>
+                    <textInputTraits key="textInputTraits" keyboardType="namePhonePad" returnKeyType="done" secureTextEntry="YES"/>
                 </textField>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_personal_divider" translatesAutoresizingMaskIntoConstraints="NO" id="84w-HO-qMX">
                     <rect key="frame" x="0.0" y="55" width="600" height="1"/>
